fix items container overflow

--- a/src/components/LibraryMenuItems.scss
+++ b/src/components/LibraryMenuItems.scss
@@ -96,7 +96,8 @@
     }
     &__items {
       flex: 1;
-      overflow-y: scroll;
+      overflow-y: auto;
+      overflow-x: hidden;
       margin-bottom: 1rem;
     }
 
